--- a/src/app.pcss
+++ b/src/app.pcss
@@ -73,7 +73,7 @@
 @layer base {
 	* {
 		@apply border-border;
-		font-family: 'Inter', 'sans-serif', 'system';
+		font-family: 'Quicksand', 'sans-serif', 'system';
 	}
 	body {
 		@apply bg-background text-foreground;
